fix bug spinner position after reserve button click

--- a/index.html
+++ b/index.html
@@ -104,10 +104,12 @@
                                                             <h3>Success to send...</h3>
                                                         </div>
                                                         <!--  -->
-                                                        <div class="loading">
-                                                            <div class="arc"></div>
-                                                            <div class="arc"></div>
-                                                            <div class="arc"></div>
+                                                        <div class="loading-field">
+                                                            <div class="loading">
+                                                                <div class="arc"></div>
+                                                                <div class="arc"></div>
+                                                                <div class="arc"></div>
+                                                            </div>
                                                         </div>
                                                                                                               
                                                         <div data-animation-role="button" class="form-button-wrapper form-button-wrapper--align-center">
