--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                                                             <div class="form-item field text required">
                                                                 <h2 class="heading-ttl inquiryForm-title">名字（漢字)<span class="iconElem icon-text icon-red inquiryForm-requiredLabel">必須</span></h2>
                                                                 <div class="err-msg" id="first_name_error">
-                                                                    ※エラー
+                                                                    ※名字（漢字)を入力してください
                                                                 </div>
                                                                 <input class="field-element text" type="text" id="first_name" aria-required="true">
                                                             </div>
@@ -61,7 +61,7 @@
                                                             <div class="form-item field text required">
                                                                 <h2 class="heading-ttl inquiryForm-title">名前(フリガナ)<span class="iconElem icon-text icon-red inquiryForm-requiredLabel">必須</span></h2>
                                                                 <div class="err-msg" id="second_name_error">
-                                                                    ※エラー
+                                                                    ※お名前(フリガナ)を入力してください
                                                                 </div>
                                                                 <input class="field-element text" type="text" id="second_name" aria-required="true">
                                                             </div>
@@ -83,7 +83,7 @@
                                                             <fieldset id="time_field" class="form-item field checkbox required" aria-required="true">
                                                                 <h2 class="heading-ttl inquiryForm-title">予約希望時間<span class="iconElem icon-text icon-red inquiryForm-requiredLabel">必須</span></h2>
                                                                 <div class="err-msg" id="time_error">
-                                                                    ※エラー
+                                                                    ※ご予約希望時間を選択してください
                                                                 </div>
                                                                 <div class="custom-control form-control-lg custom-checkbox">
                                                                     <input type="checkbox" class="custom-control-input" id="t_anytime" name="time[]">
