fix mail sending and add phpmailer module

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     <meta name="twitter:description" content="※保険マンモス（運営会社）より下記のようなご連絡を、TEL、メール、SMS、ダイレクトメールにてさせていただきます。  (無料撮影会の日程や当日のご準備・写真データのご送付等に関するご連絡・その他有益な情報のご提供)" />
     <link rel="stylesheet" type="text/css" href="./assets/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/site.css">
-    <!-- <link rel="stylesheet" type="text/css" href="./assets/css/aaa.css"> -->
     <!-- global header injection code -->
 </head>
 
@@ -86,15 +85,15 @@
                                                                     ※ご予約希望時間を選択してください
                                                                 </div>
                                                                 <div class="custom-control form-control-lg custom-checkbox">
-                                                                    <input type="checkbox" class="custom-control-input" id="t_anytime" name="time[]">
+                                                                    <input type="checkbox" class="custom-control-input" id="t_anytime" name="time[]" value="何時でもいい">
                                                                     <label class="custom-control-label" for="t_anytime">何時でもいい</label>
                                                                 </div>
                                                                 <div class="custom-control form-control-lg custom-checkbox">
-                                                                    <input type="checkbox" class="custom-control-input" id="t_morning" name="time[]">
+                                                                    <input type="checkbox" class="custom-control-input" id="t_morning" name="time[]" value="午前（10：00～13：00）">
                                                                     <label class="custom-control-label" for="t_morning">午前（10：00～13：00）</label>
                                                                 </div>
                                                                 <div class="custom-control form-control-lg custom-checkbox">
-                                                                    <input type="checkbox" class="custom-control-input" id="t_afternoon" name="time[]">
+                                                                    <input type="checkbox" class="custom-control-input" id="t_afternoon" name="time[]" value="昼（13：00～15：00）">
                                                                     <label class="custom-control-label" for="t_afternoon">昼（13：00～15：00）</label>
                                                                 </div>
                                                             </fieldset>
