modify UI of reserve page and fix sendmail file for sending mail

--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
                                                         <div class="field-error" id="field_error">
                                                             エラー項目を確認してください
                                                         </div>
+                                                        <div class="confirm-field" id="confirm-field">
+                                                            内容をご確認の上、<br>
+                                                            「申し込み」ボタンをクリックしてください。
+                                                        </div>
                                                         <!--  -->
                                                         <div class="field-list clear">
                                                             <div class="form-item field text required">
@@ -100,7 +104,8 @@
                                                         </div>
                                                         <!--  -->
                                                         <div class="send-okay">
-                                                            <h3>Success to send...</h3>
+                                                            <h3>お申込みありがとうございました。<p>				
+                                                                お控えを送信しておりますので、ご確認ください。</h3>
                                                         </div>
                                                         <!--  -->
                                                         <div class="loading-field">
