modify UI input field and set response email

--- a/index.html
+++ b/index.html
@@ -69,6 +69,14 @@
                                                                 <input class="field-element text" type="text" id="second_name" aria-required="true">
                                                             </div>
 
+                                                            <div class="form-item field text required">
+                                                                <h2 class="heading-ttl inquiryForm-title">メールアドレス<span class="iconElems icon-text icon-red inquiryForm-requiredLabel">任意</span></h2>
+                                                                <div class="err-msg" id="email_error">
+                                                                    ※メールアドレスを正確に入力してください 
+                                                                </div>
+                                                                <input class="field-element text" type="text" id="email_address" aria-required="true">
+                                                            </div>
+
                                                             <div class="form-item field select required">
                                                                 <h2 class="heading-ttl inquiryForm-title">予約希望場所<span class="iconElem icon-text icon-red inquiryForm-requiredLabel">必須</span></h2>
                                                                 <select id="reserve_place" name="reserve_place" aria-required="true">
